<resources>
    <string name="app_name">Movie Flix</string>
    <string name="no_network">No internet connection</string>

    <!-- menus-->
    <string name="action_sort">Sort By</string>
    <string name="action_search">Search</string>
    <string name="action_language">Movie Language</string>

    <string name="press_again_to_exit">Press again to exit</string>

    <string name="not_available">N/A</string>

    <!-- network connection -->

    <string name="network_connected">Connected to Internet</string>
    <string name="network_not_connected">Not connected to internet</string>

    <!-- Sort dialog -->
    <string name="sort_dialog_title">Sort by</string>
    <string name="sort_dialog_upcoming">Upcoming</string>
    <string name="sort_dialog_most_popular">Most Popular</string>
    <string name="sort_dialog_highest_rated">Highest rated</string>
    <string name="sort_dialog_most_rated">Top rated</string>


    <string name="plot_synopsis">Plot Synopsis</string>
    <string name="trailers">Trailers</string>
    <string name="casts">Casts</string>
    <string name="similiar_movies">Similar Movies</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--- Navigation -->

    <string name="movies">Movies</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>

    <string name="no_fav_movies">No favourite movies</string>
    <string name="added_to_favorites">Added to favourites</string>
    <string name="removed_from_favorites">Removed from favourites</string>

    <string name="no_internet_connection">No internet connection</string>

    <!--- Preferences -->

    <string name="lang_title_preference">Movie Language</string>
    <string name="dialog_lang_title_preference">Select Movie Original Language</string>
    <string name="pref_lang_key" translatable="false">movie_language</string>
    <string name="pref_lang_default_value">@string/pref_lang_english_value</string>

    <string name="pref_lang_english_entry">English</string>
    <string name="pref_lang_french_entry">French</string>
    <string name="pref_lang_russia_entry">Russian</string>
    <string name="pref_lang_hindi_entry">Hindi</string>
    <string name="pref_lang_tamil_entry">Tamil</string>
    <string name="pref_lang_malayalam_entry">Malayalam</string>
    <string name="pref_lang_telugu_entry">Telugu</string>

    <string name="pref_lang_english_value">en</string>
    <string name="pref_lang_french_value">fr</string>
    <string name="pref_lang_russia_value">ru</string>
    <string name="pref_lang_hindi_value">hi</string>
    <string name="pref_lang_tamil_value">ta</string>
    <string name="pref_lang_malayalam_value">mal</string>
    <string name="pref_lang_telugu_value">te</string>

   <!-- <string name="night_mode_preference">Night Mode</string>
    <string name="pref_auto_night_mode_title">Automatic Night Mode</string>
    <string name="pref_auto_night_mode_default">false</string>
    <string name="pref_auto_night_mode_key">auto Night Mode</string>
    <string name="pref_auto_night_mode_summary">Automatically toggles Night Mode depending on the time.</string>

    <string name="pref_night_mode_title">Enable Night Mode</string>
    <string name="pref_night_mode_default">false</string>
    <string name="pref_night_mode_key">auto Night Mode</string>
    <string name="pref_night_mode_summary_on">Switch off to enable Night Mode</string>
    <string name="pref_night_mode_summary_off">Switch on to enable Night Mode</string>-->

</resources>
